# EmotivPhysicIMU

./: README.md  main.py  pyproject.toml  report.html
cleaning_pipeline/: Phyics_features.py  ml_pipeline.py  movement_artefacts.py  run_cleaning.py
cleaning_pipeline/configs/: config_LR.yaml  config_LR_2steps.yaml  config_catboost.yaml  config_catboost_2steps.yaml
cleaning_pipeline/models/: Catboosts.py  LinearRegressions.py  Residuals.py  __init__.py  base.py
emotivphysicimu/: __init__.py  cli.py  constants.py  evaluation.py  features.py  metrics.py  model.py  physics.py  report.py
tests/: test_api.py
