[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emotivphysicimu"
version = "0.1.0"
description = "Feature extraction and light regression tools for Emotiv EEG/IMU artefact cleaning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mapie",
    "matplotlib",
    "mne",
    "numpy",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "scikit-learn",
    "scipy",
]
license = { text = "MIT" } 
authors = [{ name = "Jean-Baptiste Chaudron", email = "jb.chaudron8@gmail.com" }]
keywords = ["eeg", "emotiv", "imu", "artefact", "regression"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
catboost = ["catboost"]
dev = ["pytest"]

[project.scripts]
emotivphysicimu = "emotivphysicimu.cli:main"

[project.urls]
Homepage = "https://github.com/jb-chaudron/EmotivPhysicIMU"
Issues = "https://github.com/jb-chaudron/EmotivPhysicIMU/issues"